fix path firebase + add historic

--- a/admin.html
+++ b/admin.html
@@ -22,8 +22,8 @@ input, select, button { width:100%; padding:10px; margin-top:5px; }
 
 <label>Session</label>
 <select id="type-session">
-<option value="Sprint">Sprint</option>
-<option value="Race">Race</option>
+<option value="sprint">sprint</option>
+<option value="race">race</option>
 </select>
 
 <div class="grid-admin">
