--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
                 </ul>
                 <h3>🎯 Points</h3>
                 <ul>
-                    <li>💥 -1 pt (Chute OK)</li>
-                    <li>🥇 -3 pts | 🥈 -2 pts | 🥉 -1 pt (Place OK)</li>
-                    <li>🔄 +1 pt (Mauvaise place) | ❌ +3 pts (Absent podium)</li>
+                    <li>💥 +1 point pour DNF valide </li>
+                    <li>🥇 +3 points | 🥈 +2 points | 🥉 +1 point pour la place du podium exacte</li>
+                    <li>🔄 -1 point pilote sur la mauvaise place | ❌ -3 points Pilote absent de podium</li>
                 </ul>
-                <p><strong>Le score le plus BAS gagne !</strong></p>
+                <p><strong>Le score le plus haut gagne !</strong></p>
             </div>
         </div>
     </div>
