--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <ul>
                     <li>💥 +2 point pour DNF valide </li>
                     <li>🥇 +3 points | 🥈 +2 points | 🥉 +1 point pour la place du podium exacte</li>
-                    <li>🔄 0 point pilote sur la mauvaise place | ❌ -1 points Pilote absent de podium</li>
+                    <li>🔄 +1 point pilote sur la mauvaise place | ❌ -1 points Pilote absent de podium</li>
                 </ul>
                 <p><strong>Le score le plus haut gagne !</strong></p>
             </div>
